tests/snapshots/sesion_prefijo_80x24.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI · SESIÓN ──────────────────────────────────────────────────── hetzner-01 ─
▸● 1 hetzner-01 │ ◐ 2 │ ✕ 3 │ +
root@hetzner-01:~# htop
  (htop repintado a 80x20)
█

















 [MAGI] ^]  1-9 n p pestañas · l lista · c conectar · x cerrar · q volver
