tests/snapshots/sesion_relleno.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI · SESIÓN ──────────────────────────────────────────────────── hetzner-01 ─
▸● 1 hetzner-01 │ ◐ 2 │ ✕ 3 │ +
root@hetzner-01:~# htop                                     ░░░░░░░░░░░░░░░░░░░░
  (htop repintado a 60x14)                                  ░░░░░░░░░░░░░░░░░░░░
█                                                           ░░░░░░░░░░░░░░░░░░░░
                                                            ░░░░░░░░░░░░░░░░░░░░
                                                            ░░░░░░░░░░░░░░░░░░░░
                                                            ░░░░░░░░░░░░░░░░░░░░
                                                            ░░░░░░░░░░░░░░░░░░░░
                                                            ░░░░░░░░░░░░░░░░░░░░
                                                            ░░░░░░░░░░░░░░░░░░░░
                                                            ░░░░░░░░░░░░░░░░░░░░
                                                            ░░░░░░░░░░░░░░░░░░░░
                                                            ░░░░░░░░░░░░░░░░░░░░
                                                            ░░░░░░░░░░░░░░░░░░░░
                                                            ░░░░░░░░░░░░░░░░░░░░
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
 ● 1/3 · hetzner-01 · 18 m · ed25519 (agente) · 60×14 (mín. ventana 2) · ^] ?
