tests/snapshots/sesion_relleno_40x12.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI · SESIÓN ──────────── hetzner-01 ─
▸● 1 hetzner-01 │ ◐ 2 │ ✕ 3 │ +
root@hetzner-01:~# htop       ░░░░░░░░░░
  (htop repintado a 30x5)     ░░░░░░░░░░
█                             ░░░░░░░░░░
                              ░░░░░░░░░░
                              ░░░░░░░░░░
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
 ● 1/3 · 30×5 (mín. ventana 2) · ^] ?
