tests/snapshots/sesion_relleno_ascii.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI - SESIÓN ---------------------------------------------------- hetzner-01 -
>* 1 hetzner-01 | o 2 | x 3 | +
root@hetzner-01:~# htop                                     ....................
  (htop repintado a 60x14)                                  ....................
                                                            ....................
                                                            ....................
                                                            ....................
                                                            ....................
                                                            ....................
                                                            ....................
                                                            ....................
                                                            ....................
                                                            ....................
                                                            ....................
                                                            ....................
                                                            ....................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
................................................................................
 * 1/3 - hetzner-01 - 18 m - ed25519 (agente) - 60x14 (mín. ventana 2) - ^] ?
