tests/snapshots/sesiones_40x12.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI · SESIONES · 3 sesiones ─────────
  ESTADO PESTAÑA            TIEMPO
▸ ●      hetzner-01         18 m
  ✕      hetzner-02         caída
  ●      mac-mini-m1        3 m






 ↵ entrar  n nueva  r reconectar  ? más
