tests/snapshots/sesiones_70x20.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI · SESIONES · 3 sesiones · 4 ventanas ──────────────────────────
  ESTADO PESTAÑA            HOST             TIEMPO
▸ ●      hetzner-01         hetzner-01       18 m
  ✕      hetzner-02         hetzner-02       caída
  ●      mac-mini-m1        mac-mini-m1      3 m









──────────────────────────────────────────────────────────────────────
  hetzner-01 · clave
  servidor pid 4242 · protocolo 4 · desde hace N s


 ↵ entrar  n nueva  r reconectar  x cerrar  S apagar  ? más
