tests/snapshots/sesiones_vacia_40x12.snap
---
source: tests/redimensionado/arnes.rs
---
 MAGI · SESIONES · 0 sesiones ─────────
  Sin sesiones abiertas. ↵ en un host,
  prefijo c o «n» abre una nueva.








 ↵ entrar  n nueva  r reconectar  ? más
