tests/snapshots/sincronizar_200x60.snap
---
source: tests/redimensionado/arnes.rs
---
┌ [tmp]/hogar ───────────────────────────────────────────────────────────────────────────┐┌ /var/www/cooperapp ──────────────────────────────────────────────────────────────────────────────┐
│▸  ..                                                                                             ││   ..                                                                                             │
│   app                — 2025                                                                      ││   app                     — 2025                                                                 │
│   static             — 2025                                                                      ││   static                  — 2025                                                                 │
│   config.yaml     2 kB 2025   ≠                                                                  ││   backup.tar.gz      1.1 MB 2025   ✕                                                             │
│   main.py        14 kB 2025   ≠                                                                  ││   config.yaml          1 kB 2025   ≠                                                             │
│   notas.md       512 B 2025   ✕                                                                  ││   main.py             14 kB 2025   ≠                                                             │
│   README.md       3 kB 2025                                                                      ││   README.md            3 kB 2025                                                                 │
│                                                                                                  ││   requirements.txt    300 B 2025   ✕                                                             │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                    ┌ SINCRONIZAR · subida ──────────────────────────────────────┐                                                                    │
│                                                                    │                                                            │                                                                    │
│                                                                    │  origen   ~/proyectos/cooperapp                            │                                                                    │
│                                                                    │  destino  hetzner-01:/var/www/cooperapp                    │                                                                    │
│                                                                    │  [ ] borrar en destino lo que no está en origen            │                                                                    │
│                                                                    │  excluir (además de .git/ target/ node_modules/ …)         │                                                                    │
│                                                                    │  [ *.log┃ ]                                                │                                                                    │
│                                                                    │  .magiignore del origen: 4 patrones                        │                                                                    │
│                                                                    │  [x] guardar como  [ web-prod ]                            │                                                                    │
│                                                                    │                                                            │                                                                    │
│                                                                    │  ↵ planificar   ⇥ campo   espacio marcar   esc cancelar    │                                                                    │
│                                                                    │                                                            │                                                                    │
│                                                                    └────────────────────────────────────────────────────────────┘                                                                    │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
└ 7 elementos · 20 kB ─────────────────────────────────────────────────────────────────────────────┘└ 8 elementos · 1.1 MB ────────────────────────────────────────────────────────────────────────────┘
 ⇥ panel  ↵ abrir  c copiar  m mover  x borrar  E editar  S sincronizar  p permisos  L guardadas  r renombrar  d dir  . ocultos  / filtrar  g ruta  h host  t cola  q volver  ? ayuda
